--- a/project-3/src/components/Hero.css
+++ b/project-3/src/components/Hero.css
@@ -1,10 +1,10 @@
-video {
+/* video {
     object-fit: cover;
     width: 100%;
     height:100%;
     position: fixed;
     z-index:-1;
-}
+} */
 
 .hero-container {
     background: url('../assets/Runescape.jpg') center center/cover no-repeat;
