--- a/project-3/src/components/Hero.css
+++ b/project-3/src/components/Hero.css
@@ -1,18 +1,31 @@
-/* video {
-    object-fit: cover;
-    width: 100%;
-    height:100%;
-    position: fixed;
-    z-index:-1;
-} */
+
 
 .hero-container {
-    background: url('../assets/Runescape.jpg') center center/cover no-repeat;
+    background: url('../assets/RunescapeTall.jpg') center center/cover no-repeat;
     height: 100vh;
-    width:100%;
+    width:20%;
     display:flex;
     flex-direction:column;
     align-items:center;
-    box-shadow: inset 0 0 0 100px rgba(0,0,0.2);
-    object-fit:contain
+    box-shadow: inset 0 0 0 10px rgba(0,0,0.2);
+    object-fit:contain;
+    
+    
 }
+.hero-btns {
+    bottom: 0;
+    position: fixed;
+  }
+  
+  .hero-btns .btn {
+    bottom: 0;
+position: fixed;
+  }
+
+  h1{
+      color:white;
+
+  }
+  p{
+      color:white;
+  }
