finished stylizing page 1 next will be to populate it with API

--- a/project-3/src/components/ECarousel.css
+++ b/project-3/src/components/ECarousel.css
@@ -1,7 +1,16 @@
 .ECarousel{
     font-family: sans-serif;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    /* height: 100vh; */
+    
+  }
+  h1{
+      color:black
+  }
+
+  .c-image1{
+      width: 420px;
+      height:300px;
   }
