styling on the jsx footer component

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -1,6 +1,6 @@
 .footer-container {
     background-color: #002855;
-    padding: 4rem 0 2rem 0;
+    padding: 0 0 0 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,12 +26,12 @@
   
   .footer-subscription-heading {
     margin-bottom: 24px;
-    font-size: 24px;
+    font-size: 12px;
   }
   
   .footer-subscription-text {
     margin-bottom: 24px;
-    font-size: 20px;
+    font-size: 10px;
   }
   
   .footer-input {
@@ -52,6 +52,7 @@
     margin-right: 300px;
     display: flex;
     justify-content: center;
+    font-size: 24;
 
   }
   
@@ -67,6 +68,7 @@
     text-align: center;
     width: 160px;
     box-sizing: border-box;
+    font-size: 24px;
   }
   
   .footer-link-items h2 {
@@ -98,8 +100,12 @@
   
   /* Social Icons */
   .social-icon-link {
+    padding: 8px;
+    letter-spacing: 2px;
     color: #fff;
-    font-size: 24px;
+    font-size: 16px;
+    
+
   }
   
   .social-media {
@@ -117,6 +123,7 @@
   }
   
   .social-icons {
+    flex-direction:column;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -124,6 +131,7 @@
   }
   
   .social-logo {
+    flex-direction:column;
     color: #fff;
     justify-self: start;
     margin-left: 20px;
@@ -163,4 +171,21 @@
   }
   
   @media screen and (max-width: 768px) {
+  }
+
+
+
+  .gitHubStuff{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 240px;
+  }
+
+  .center-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+
   }
