--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -1,4 +1,13 @@
 
+  /* vidoe stuff */
+
+  video {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -1;
+  }
   
   .hero-container {
     background: url('../../assets/darkRadar.jpg') center center/cover no-repeat;
@@ -40,7 +49,18 @@
     margin-left: 4px;
   }
   
+  @media screen and (max-width: 960px) {
+    .hero-container > h1 {
+      font-size: 70px;
+      margin-top: -150px;
+    }
+  }
   
+  @media screen and (max-width: 768px) {
+    .hero-container > h1 {
+      font-size: 50px;
+      margin-top: -100px;
+    }
   
     .hero-container > p {
       font-size: 30px;
@@ -54,4 +74,6 @@
     .btn {
       width: 100%;
     }
-  
+  }
+
+   
